--- a/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.html
+++ b/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.html
@@ -7,55 +7,72 @@
   </div>
   <div class="freelancer-list">
 
-    <div class="freelancer-item">
-      <div class="freelancer-item__top">
-        <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-designer.svg" alt="">
+    <a [routerLink]="['/catalog', 'Design-Art'] | localize" class="freelancer-item__wrapper">
+      <div class="freelancer-item">
+        <div class="freelancer-item__top">
+          <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-designer.svg" alt="">
+          </div>
+          <div class="freelancer-item__title">Графика и Дизайн</div>
         </div>
-        <div class="freelancer-item__title">Графика и Дизайн</div>
+        <div class="freelancer-item__text">Создаем дизайн логотипов, сайтов, моб. приложений, дизайн полиграфии,
+          брендбук.
+        </div>
       </div>
-      <div class="freelancer-item__text">Создаем дизайн логотипов, сайтов, моб. приложений, дизайн полиграфии, брендбук.
+    </a>
+
+    <a [routerLink]="['/catalog', 'Webprogramming'] | localize" class="freelancer-item__wrapper">
+      <div class="freelancer-item">
+        <div class="freelancer-item__top">
+          <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-web.svg" alt=""></div>
+          <div class="freelancer-item__title">Вёрстка и Разработка</div>
+        </div>
+        <div class="freelancer-item__text">Разработка вебсайтов, мобильных приложений, программ и онлайн- сервисов,
+          верстка, QA</div>
       </div>
-    </div>
-    <div class="freelancer-item">
-      <div class="freelancer-item__top">
-        <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-web.svg" alt=""></div>
-        <div class="freelancer-item__title">Вёрстка и Разработка</div>
+    </a>
+
+    <a [routerLink]="['/catalog', 'WorkingwithTexts'] | localize" class="freelancer-item__wrapper">
+      <div class="freelancer-item">
+        <div class="freelancer-item__top">
+          <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-copyright.svg" alt=""></div>
+          <div class="freelancer-item__title">Копирайтинг и Переводы</div>
+        </div>
+        <div class="freelancer-item__text">Рерайт, художественный текст, веб-контент, рефераты, курсовые, дипломы,
+          статьи.
+        </div>
       </div>
-      <div class="freelancer-item__text">Разработка вебсайтов, мобильных приложений, программ и онлайн- сервисов,
-        верстка, QA</div>
-    </div>
-    <div class="freelancer-item">
-      <div class="freelancer-item__top">
-        <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-copyright.svg" alt=""></div>
-        <div class="freelancer-item__title">Копирайтинг и Переводы</div>
+    </a>
+    <a [routerLink]="['/catalog', 'Marketing', 'SEOsiteaudit'] | localize" class="freelancer-item__wrapper">
+      <div class="freelancer-item">
+        <div class="freelancer-item__top">
+          <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-seo.svg" alt=""></div>
+          <div class="freelancer-item__title">SЕО и Аналитика</div>
+        </div>
+        <div class="freelancer-item__text">Исследование рынка и опросы, поисковое продвижение, продажа ссылок, SERM,
+          генерация лидов</div>
       </div>
-      <div class="freelancer-item__text">Рерайт, художественный текст, веб-контент, рефераты, курсовые, дипломы, статьи.
+    </a>
+    <a [routerLink]="['/catalog', 'Marketing'] | localize" class="freelancer-item__wrapper">
+      <div class="freelancer-item">
+        <div class="freelancer-item__top">
+          <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-marketing.svg" alt=""></div>
+          <div class="freelancer-item__title">Интернет маркетинг</div>
+        </div>
+        <div class="freelancer-item__text">Продвижение сайта и блога, реклама в социальных медиа, поисковые системы,
+          SMM,
+          e-mail маркетинг.</div>
       </div>
-    </div>
-    <div class="freelancer-item">
-      <div class="freelancer-item__top">
-        <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-seo.svg" alt=""></div>
-        <div class="freelancer-item__title">SЕО и Аналитика</div>
+    </a>
+    <a [routerLink]="['/catalog', 'Audio-Video'] | localize" class="freelancer-item__wrapper">
+      <div class="freelancer-item">
+        <div class="freelancer-item__top">
+          <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-video.svg" alt=""></div>
+          <div class="freelancer-item__title">Видео и Анимация</div>
+        </div>
+        <div class="freelancer-item__text">2D Анимация, 3D Анимация, музыка/звуки, видео, виртуальные туры, раскадровки,
+          гейм-арт.</div>
       </div>
-      <div class="freelancer-item__text">Исследование рынка и опросы, поисковое продвижение, продажа ссылок, SERM,
-        генерация лидов</div>
-    </div>
-    <div class="freelancer-item">
-      <div class="freelancer-item__top">
-        <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-marketing.svg" alt=""></div>
-        <div class="freelancer-item__title">Интернет маркетинг</div>
-      </div>
-      <div class="freelancer-item__text">Продвижение сайта и блога, реклама в социальных медиа, поисковые системы, SMM,
-        e-mail маркетинг.</div>
-    </div>
-    <div class="freelancer-item">
-      <div class="freelancer-item__top">
-        <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-video.svg" alt=""></div>
-        <div class="freelancer-item__title">Видео и Анимация</div>
-      </div>
-      <div class="freelancer-item__text">2D Анимация, 3D Анимация, музыка/звуки, видео, виртуальные туры, раскадровки,
-        гейм-арт.</div>
-    </div>
+    </a>
 
   </div>
 </div>
