--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.html
@@ -2,12 +2,12 @@
 
 <app-main-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-main-user-settings>
 <app-location-language-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-location-language-user-settings>
-<app-education-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-education-user-settings>
-<app-additional-education-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-additional-education-user-settings>
+<app-education-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel" [closeAfterSaveSettings] = "succesRessult"></app-education-user-settings>
+<app-additional-education-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel" [closeAfterSaveSettings] = "succesRessult"></app-additional-education-user-settings>
 <button type="submit" class="btn save-all" (click)="updateSettings()" *ngIf="userSettingsModel">сохранить изменения</button>
 
 
-<div class="done-message" *ngIf="succesMessage" (click)="closePopUp()">
+<div class="done-message" *ngIf="popUpStatus" (click)="togglePopUp()">
     <div class="done-message__info-block">
         <div class="done-message__icon"><img src="/assets/images/svg/done.svg" alt=""></div>
         <div class="done-message__text">
@@ -15,7 +15,7 @@
         </div>
         <div class="btns-wrapper">
         </div>
-        <div class="done-message__close" (click)="closePopUp()"></div>
+        <div class="done-message__close" (click)="togglePopUp()"></div>
     </div>
 </div>
   
