--- a/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.scss
+++ b/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.scss
@@ -20,10 +20,12 @@
         background-image: url(/assets/images/images/dots-advantages.svg)
     }
 }
-.freelancer-item{
+.freelancer-item__wrapper{
     width: calc(33% - 36px);
     margin: 0 18px 64px;
-
+    text-decoration: none;
+}
+.freelancer-item{
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(128, 152, 213, 0.2);
     border-radius: 16px;
