--- a/src/app/shared/modules/categories-header/categories-header.component.scss
+++ b/src/app/shared/modules/categories-header/categories-header.component.scss
@@ -149,7 +149,8 @@
 
 @media (max-width: 1499px) {
   .wrapper{
-    max-width: 1010px;
+    max-width: 1110px;
+    padding:  0px;
   }
   .category-wrapper {
     .category-name{
