--- a/src/app/catalog-page/catalog-home-page/catalog-home-page.component.scss
+++ b/src/app/catalog-page/catalog-home-page/catalog-home-page.component.scss
@@ -51,3 +51,30 @@
     }
   }
 }
+
+@media (max-width: 1499px) {
+  .wrapper{
+    max-width: 1110px;
+    margin: 0 auto;
+  }
+  .category{
+    padding: 15x 15px 0;
+    &-name{
+      font-size: 16px;
+      margin: 0 0 10px;
+    }
+    .subcategory-name{
+      margin-bottom: 6px;
+      a{
+        font-size: 14px;
+        line-height: 18px;
+        
+      }
+    }
+  }
+}
+@media (max-width: 1360px) {
+  .wrapper{
+    max-width: 1010px;
+  }
+}
