--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -13,6 +13,7 @@
                 </div>
             </section>
             <section class="exit">
+                <app-language></app-language>
                 <button (click)="userExit()">{{'general.exit' | translate}}</button>
             </section>
         </div>
@@ -26,6 +27,7 @@
                         <img src="'assets/images/images/aura_lvl{{lvl}}.svg'" alt="user-lvl" *ngIf="user.rank_id === lvl">
                     </ng-container>
                 </div>
+                <img [src]="user.avatar" alt="avatar" />
                 <p class="name">{{ user.name }} {{ user.surname}}</p>
                 <div class="rating">
                     <app-star-rating [currentRating]="user.rating"></app-star-rating>
