--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
@@ -1,6 +1,6 @@
 <div class="inform_section">
   <div class="inform_section__title">
-    <h3>Высшее Образование</h3>
+    <h3>{{'general.education' | translate}}</h3>
   </div>
   <div class="inform_section__fields">
     <div class="field-block-multiple">
