--- a/src/app/user-page/user-page-services/user-page-services.component.html
+++ b/src/app/user-page/user-page-services/user-page-services.component.html
@@ -1,5 +1,5 @@
 <section class="user-services">
-  <div class="section-title">Услуги фрилансера</div>
+  <div class="section-title">{{'user-page.freelancer-services' | translate}}</div>
   <div class="cards-list">
     <ng-container *ngFor="let offer of userData.offers; let i = index">
       <div class="card" *ngIf="i <= offersShow">
@@ -14,14 +14,14 @@
           </p>
           <div class="card-description__bottom">
             <div class="star-rating" [ngClass]="{'empty-rating': offer.rating == 0}">{{offer.rating}}</div>
-            <div class="card-description__comments">({{offer.comments_count}} отзывов)</div>
+            <div class="card-description__comments">({{offer.comments_count}} {{'general.comments' | translate}})</div>
           </div>
 
         </div>
         <div class="card-bottom">
           <div class="card-bottom__like"></div>
           <div class="card-bottom__price">
-            от
+            {{'general.from' | translate}}
             <span>{{offer.minPrice}}</span>
           </div>
         </div>
@@ -30,6 +30,6 @@
 
   </div>
   <ng-container *ngIf="userData.offers.length > 6">
-    <p class="show-offers" (click)=showAllOffers() [ngClass] = "{open: offersShowState}">показать больше</p>
+    <p class="show-offers" (click)=showAllOffers() [ngClass] = "{open: offersShowState}">{{'general.show-more' | translate}}</p>
   </ng-container>
 </section>
