--- a/src/app/shared/modules/diagram/diagram.component.html
+++ b/src/app/shared/modules/diagram/diagram.component.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="months">
-                <span *ngFor="let month of allMonths">{{ month | monthPipe: 'MMMM' }}</span>
+                <span *ngFor="let month of allMonths">{{ month | monthPipe: 'MM' }}</span>
             </div>
         </div>
     </div>
