--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.html
@@ -1,8 +1,8 @@
 <div class="step-wrapper">
     <form #form="ngForm" (ngSubmit)="nextStep(form)">
-        <h3>5. Бриф</h3>
+        <h3>{{'dashboard.create-service.fifth-step.title' | translate}}</h3>
 
-        <h5>Кратко опишите, что вам требуется для работы</h5>
+        <h5>{{'dashboard.create-service.fifth-step.subtitle' | translate}}</h5>
         <div class="brief-item" *ngFor="let item of userService.offerbrief; let i = index" [style.border]="showedItem !== i+1 && !brief.valid ? '1px solid #f44336': 'none'" [ngClass]="{ hiddenItem: showedItem !== i+1 }">
             <form #brief="ngForm">
                 <div class="el">
@@ -18,29 +18,32 @@
                     </div>
                     <div class="fields">
                         <div class="title" [style.borderColor]="(title.invalid && submitted )? '#f44336' : '#dce0e6'">
-                            <textarea name="briefTtitle-{{i}}" placeholder="Напр., спецификации, брендбук, размеры, фотоматериалы" required #title="ngModel" maxlength="500" [(ngModel)]="userService.offerbrief[i].briefTitle"></textarea>
-                            <span class="title-controls" *ngIf="title.pristine"> 500 символов</span>
+                            <textarea name="briefTtitle-{{i}}" placeholder="{{'dashboard.create-service.fifth-step.title-placehilder' | translate}}" required #title="ngModel" maxlength="500" [(ngModel)]="userService.offerbrief[i].briefTitle" outsideTooltip="{{'dashboard.create-service.fifth-step.tool-tip.title-field-title' | translate}}"
+                                outsideTooltipDescription="{{'dashboard.create-service.fifth-step.tool-tip.title-field-subtitle' | translate}}" placement="right"></textarea>
+                            <span class="title-controls" *ngIf="title.pristine"> 500
+                &nbsp;{{'dashboard.create-service.fifth-step.symbols' | translate}}</span>
                             <span class="title-controls" *ngIf="userService.offerbrief[i].briefTitle && userService.offerbrief[i].briefTitle.length < 500">
-                {{userService.offerbrief[i].briefTitle.length}}/500 символов</span>
+                {{userService.offerbrief[i].briefTitle.length}}/500
+                &nbsp;{{'dashboard.create-service.fifth-step.symbols' | translate}}</span>
                             <span class="title-controls" *ngIf="userService.offerbrief[i].briefTitle && userService.offerbrief[i].briefTitle.length >= 500">
-                достаточно</span>
+                {{'dashboard.create-service.fifth-step.to-many' | translate}}</span>
                         </div>
                         <div class="options service-selects">
-                            <label for="answer-type">Тип ответа</label>
+                            <label for="answer-type">{{'dashboard.create-service.fifth-step.answer-type' | translate}}</label>
                             <mat-form-field appearance="outline">
                                 <mat-select id="answer-type-{{i}}" name="answer_type{{i))" required [(ngModel)]="userService.offerbrief[i].briefAnswerType" (ngModelChange)="onFiltersChange($event, i)">
                                     <mat-option [value]="type.value" *ngFor="let type of answerTypes"> {{ type.name }}</mat-option>
                                 </mat-select>
                             </mat-form-field>
 
-                            <input type="checkbox" [(ngModel)]="userService.offerbrief[i].briefAnwerRequired" class="tgl tgl-classic" name="requered-{{i}}" id="required-{{i}}">
+                            <input type=" checkbox" [(ngModel)]="userService.offerbrief[i].briefAnwerRequired" class="tgl tgl-classic" name="requered-{{i}}" id="required-{{i}}">
                             <label for="required-{{i}}"></label>
-                            <span>Ответ обязательный</span>
+                            <span>{{'dashboard.create-service.fifth-step.answer-required' | translate}}</span>
                         </div>
                         <div class="multi" *ngIf="userService.offerbrief[i].briefAnswerType === 'radio'">
                             <div class="brief-question-item" [style.borderColor]="checkboxFields.invalid && submitted && userService.offerbrief[i].briefAnswerType === 'radio'? '#f44336' : '#dce0e6'" *ngFor="let el of userService.offerbrief[i].briefAnswerVariants, let j = index">
 
-                                <input type="text" [(ngModel)]="userService.offerbrief[i].briefAnswerVariants[j].answerVariant" #checkboxFields="ngModel" name="answerVariant-{{j}}" placeholder="Дополнительный ответ" required maxlength="80">
+                                <input type="text" [(ngModel)]="userService.offerbrief[i].briefAnswerVariants[j].answerVariant" #checkboxFields="ngModel" name="answerVariant-{{j}}" placeholder="{{'dashboard.create-service.fifth-step.extra-answer' | translate}}" required maxlength="80">
                                 <button class="clear"> <i class="material-icons"
                     *ngIf="userService.offerbrief[i].briefAnswerVariants.length > 2" (click)="removeAnswer(i , j)">
                     close
@@ -51,16 +54,16 @@
                   <i class="material-icons">
                     add_circle_outline
                   </i>
-                  <span>Добавить еще ответ</span>
+                  <span>{{'dashboard.create-service.fifth-step.add-answer' | translate}}</span>
 
                 </button>
                                 <div class="comment">
                                     <input type="checkbox" [(ngModel)]="userService.offerbrief[i].briefMultiAnswers" class="tgl tgl-classic" name="multi-{{i}}" checkbox="" id="multi-answer">
                                     <label for="multi-answer"></label>
                                     <p>
-                                        Разрешить более одного ответа на вопрос
+                                        {{'dashboard.create-service.fifth-step.succes-many-answer' | translate}}
                                         <span>
-                      (покупатель сможет отметить несколько вариантов)
+                      ({{'dashboard.create-service.fifth-step.succes-many-answer-description' | translate}})
                     </span>
                                     </p>
                                 </div>
@@ -68,7 +71,7 @@
                         </div>
 
                         <div class="item-controls">
-                            <button class="btn-sec" type="button" [disabled]="userService.offerbrief.length === 1" (click)="showedItem = null">отменить</button>
+                            <button class="btn-sec" type="button" [disabled]="userService.offerbrief.length === 1" (click)="showedItem = null">{{'dashboard.create-service.fifth-step.cancel' | translate}}</button>
                             <button class="btn" type="button" [disabled]="form.invalid" (click)="showedItem = null">Добавить</button>
                         </div>
                     </div>
@@ -81,7 +84,7 @@
         <i class="material-icons">
           add_circle_outline
         </i>
-        <span>Добавить требование</span>
+        <span>{{'dashboard.create-service.fifth-step.add-requirement' | translate}}</span>
       </button>
         </div>
 
